--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "url": "git://github.com/totherik/shush.git"
   },
   "author": "Erik Toth <totherik@gmail.com>",
+  "contributors": [
+    {
+      "name" : "Jonathan Samines"
+    }
+  ],
   "license": "MIT",
   "devDependencies": {
     "tape": "~4.6.0",
