--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "tape test/*.js",
+    "test": "tape test/*.js && node test/shush-esm.mjs",
     "cover": "istanbul cover tape -- test/*.js"
   },
   "repository": {
